--- a/data/resources/ui/preferences.ui
+++ b/data/resources/ui/preferences.ui
@@ -169,7 +169,7 @@
                 <child>
                     <object class="AdwPreferencesGroup">
                         <property name="title" translatable="yes">Formats</property>
-                        <property name="description" translatable="yes">Edit how the color formats are displayed. The “{}” will be replaced in with the values of the formats.</property>
+                        <property name="description" translatable="yes">Edit how the color formats are displayed. The “{}” will be replaced in with the values of the formats. Custom formats cannot be used as input.</property>
                         <child>
                             <object class="CustomFormatRow" id="_custom_format">
                                 <property name="title" translatable="yes">RGB Format</property>
