--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -15,4 +15,32 @@
   box-shadow: 5px 5px 5px @shade_color;
 }
 
+.hue-slider trough {
+    background: linear-gradient(90deg,
+        rgba(255,0,0,1) 0%,
+        rgba(255,255,0,1) 16.66%,
+        rgba(0,255,0,1) 33.33%,
+        rgba(0,255,255,1) 50%,
+        rgba(0,0,255,1) 66.66%,
+        rgba(255,0,255,1) 83.33%,
+        rgba(255,0,0,1) 100%
+    );
+    padding: 6px;
+}
+
+.saturation-slider trough {
+    background: linear-gradient(90deg,
+        rgba(255,255,255,1) 0%,
+        @saturation_color 100%
+    );
+    padding: 6px;
+}
+
+.value-slider trough {
+    background: linear-gradient(90deg,
+        rgba(0,0,0,1) 0%,
+        rgba(255,255,255,1) 100%
+    );
+    padding: 6px;
+}
 
